--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -111,6 +111,26 @@ $base-base-fonts: (
     42px:('d':.00),
     72px:('d':.20)
     ),
+  'museo-sans':(
+    12px:('d':.70),
+    14px:('d':.70),
+    16px:('d':.65),
+    18px:('d':.60),
+    20px:('d':.50),
+    22px:('d':.50),
+    24px:('d':.40),
+    26px:('d':.90),
+    28px:('d':.80),
+    30px:('d':.80),
+    32px:('d':.70),
+    34px:('d':.70),
+    36px:('d':.60),
+    38px:('d':.60),
+    40px:('d':.00),
+    42px:('d':.00),
+    48px:('d':.85),
+    72px:('d':.20)
+    ),
   'Open Sans':(
     12px:('d':.70),
     14px:('d':.60),
@@ -353,7 +373,7 @@ $base-base-fonts: (
     20px:('d':.65),
     22px:('d':.55),
     24px:('d':.50),
-    26px:('d':0),
+    26px:('d':.00),
     28px:('d':.90),
     30px:('d':.90),
     32px:('d':.85),
@@ -363,6 +383,43 @@ $base-base-fonts: (
     40px:('d':.20),
     42px:('d':.15),
     52px:('d':.90)
+    ),
+  'droid-sans': (
+    12px:('d':.70),
+    14px:('d':.65),
+    16px:('d':.65),
+    18px:('d':.55), 
+    20px:('d':.50),
+    22px:('d':.50),
+    24px:('d':.45),
+    26px:('d':.85),
+    28px:('d':.85),
+    30px:('d':.75),
+    32px:('d':.70),
+    34px:('d':.70),
+    36px:('d':.65),
+    38px:('d':.55),
+    40px:('d':.00),
+    42px:('d':.00)
+    ),
+  'montserrat': (
+    12px:('d':.70),
+    14px:('d':.65),
+    16px:('d':.65),
+    18px:('d':.55), 
+    20px:('d':.50),
+    22px:('d':.50),
+    24px:('d':.40),
+    26px:('d':.85),
+    28px:('d':.80),
+    30px:('d':.75),
+    32px:('d':.70),
+    34px:('d':.65),
+    36px:('d':.60),
+    38px:('d':.55),
+    40px:('d':.00),
+    42px:('d':.90),
+    48px:('d':.75)
     ),
   'Courier': (
       12px:('d':.65),
