add source sans pro and oxygen

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -421,6 +421,42 @@ $base-base-fonts: (
     42px:('d':.90),
     48px:('d':.75)
     ),
+  'Source Sans Pro': (
+    12px:('d':.70),
+    14px:('d':.65),
+    16px:('d':.60),
+    18px:('d':.60), 
+    20px:('d':.50),
+    22px:('d':.40),
+    24px:('d':.40),
+    26px:('d':.85),
+    28px:('d':.80),
+    30px:('d':.70),
+    32px:('d':.70),
+    34px:('d':.65),
+    36px:('d':.65),
+    38px:('d':.55),
+    40px:('d':.00),
+    42px:('d':.95)
+    ),
+  'Oxygen': (
+    12px:('d':.70),
+    14px:('d':.65),
+    16px:('d':.55),
+    18px:('d':.50), 
+    20px:('d':.40),
+    22px:('d':.35),
+    24px:('d':.35),
+    26px:('d':.80),
+    28px:('d':.70),
+    30px:('d':.65),
+    32px:('d':.65),
+    34px:('d':.55),
+    36px:('d':.50),
+    38px:('d':.40),
+    40px:('d':.85),
+    42px:('d':.85)
+    ),
   'Courier': (
       12px:('d':.65),
       14px:('d':.55)
