--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -460,5 +460,23 @@ $base-base-fonts: (
   'Courier': (
       12px:('d':.65),
       14px:('d':.55)
+      ),
+  'Courier New': (
+      12px:('d':.80),
+      14px:('d':.70),
+      16px:('d':.70),
+      18px:('d':.65), 
+      20px:('d':.65),
+      22px:('d':.65),
+      24px:('d':.55),
+      26px:('d':.00),
+      28px:('d':.00),
+      30px:('d':.90),
+      32px:('d':.90),
+      34px:('d':.85),
+      36px:('d':.85),
+      38px:('d':.75),
+      40px:('d':.30),
+      42px:('d':.20)
       )
   );
