--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -479,5 +479,43 @@ $base-base-fonts: (
       38px:('d':.75),
       40px:('d':.30),
       42px:('d':.20)
+      ),
+  'ff-tisa-sans-web-pro': (
+        12px:('d':.70),
+        14px:('d':.65),
+        16px:('d':.55),
+        17px:('d':.55), 
+        18px:('d':.50), 
+        20px:('d':.50),
+        22px:('d':.40),
+        24px:('d':.35),
+        26px:('d':.85),
+        28px:('d':.70),
+        30px:('d':.70),
+        32px:('d':.65),
+        34px:('d':.55),
+        36px:('d':.55),
+        38px:('d':.50),
+        40px:('d':.90),
+        42px:('d':.85)
+      ),
+  'ff-tisa-web-pro': (
+        12px:('d':.65),
+        14px:('d':.60),
+        16px:('d':.50),
+        17px:('d':.50),
+        18px:('d':.50), 
+        20px:('d':.45),
+        22px:('d':.35),
+        24px:('d':.30),
+        26px:('d':.70),
+        28px:('d':.65),
+        30px:('d':.60),
+        32px:('d':.55),
+        34px:('d':.50),
+        36px:('d':.40),
+        38px:('d':.35),
+        40px:('d':.80),
+        42px:('d':.70)
       )
   );
