--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -481,6 +481,7 @@ $base-base-fonts: (
       42px:('d':.20)
       ),
   'ff-tisa-sans-web-pro': (
+        10px:('d':.20),
         12px:('d':.70),
         14px:('d':.65),
         16px:('d':.55),
@@ -500,6 +501,7 @@ $base-base-fonts: (
         42px:('d':.85)
       ),
   'ff-tisa-web-pro': (
+        10px:('d':.20),
         12px:('d':.65),
         14px:('d':.60),
         16px:('d':.50),
