Open Sans, 56px plus variant

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -149,6 +149,7 @@ $base-base-fonts: (
     38px:('d':.40),
     40px:('d':.90),
     42px:('d':.85),
+    56px:('d':.90, 3: .90)
     ),
   'alternate-gothic-no-2-d':(
     12px:('d':.75),
