Add Open Sans Condensed

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -151,6 +151,25 @@ $base-base-fonts: (
     42px:('d':.85),
     56px:('d':.90, 3: .90)
     ),
+  'Open Sans Condensed':(
+    12px:('d':.70),
+    14px:('d':.60),
+    16px:('d':.55),
+    18px:('d':.50),
+    20px:('d':.50),
+    22px:('d':.35),
+    24px:('d':.35),
+    26px:('d':.80),
+    28px:('d':.70),
+    30px:('d':.70),
+    32px:('d':.65),
+    34px:('d':.60),
+    36px:('d':.55),
+    38px:('d':.40),
+    40px:('d':.90),
+    42px:('d':.85),
+    56px:('d':.90, 3: .90)
+    ),
   'alternate-gothic-no-2-d':(
     12px:('d':.75),
     14px:('d':.80),
