source sans additional sizes

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -458,7 +458,10 @@ $base-base-fonts: (
     36px:('d':.65),
     38px:('d':.55),
     40px:('d':.00),
-    42px:('d':.95)
+    42px:('d':.95),
+    44px:('d':.15),
+    46px:('d':.15),
+    48px:('d':.05)
     ),
   'Oxygen': (
     12px:('d':.70),
