--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -461,7 +461,8 @@ $base-base-fonts: (
     42px:('d':.95),
     44px:('d':.90),
     46px:('d':.85),
-    48px:('d':.75)
+    48px:('d':.75),
+    72px:('d':.20)
     ),
   'Oxygen': (
     12px:('d':.70),
