typekit version of Open Sans and Source Sans Pro

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -151,6 +151,25 @@ $base-base-fonts: (
     42px:('d':.85),
     56px:('d':.90, 3: .90)
     ),
+  'open-sans':(
+    12px:('d':.70),
+    14px:('d':.60),
+    16px:('d':.55),
+    18px:('d':.50),
+    20px:('d':.50),
+    22px:('d':.35),
+    24px:('d':.35),
+    26px:('d':.80),
+    28px:('d':.70),
+    30px:('d':.70),
+    32px:('d':.65),
+    34px:('d':.60),
+    36px:('d':.55),
+    38px:('d':.40),
+    40px:('d':.90),
+    42px:('d':.85),
+    56px:('d':.90, 3: .90)
+    ),
   'Open Sans Condensed':(
     12px:('d':.70),
     14px:('d':.60),
@@ -443,6 +462,28 @@ $base-base-fonts: (
     48px:('d':.75)
     ),
   'Source Sans Pro': (
+    12px:('d':.70),
+    14px:('d':.65),
+    16px:('d':.60),
+    18px:('d':.60), 
+    20px:('d':.50),
+    22px:('d':.40),
+    24px:('d':.40),
+    26px:('d':.85),
+    28px:('d':.80),
+    30px:('d':.70),
+    32px:('d':.70),
+    34px:('d':.65),
+    36px:('d':.65),
+    38px:('d':.55),
+    40px:('d':.00),
+    42px:('d':.95),
+    44px:('d':.90),
+    46px:('d':.85),
+    48px:('d':.75),
+    72px:('d':.20)
+    ),
+  'source-sans-pro': (
     12px:('d':.70),
     14px:('d':.65),
     16px:('d':.60),
