--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -443,6 +443,7 @@ $base-base-fonts: (
     42px:('d':.00)
     ),
   'montserrat': (
+    11px:('d':.70),
     12px:('d':.70),
     14px:('d':.65),
     16px:('d':.65),
