--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -585,5 +585,28 @@ $base-base-fonts: (
         38px:('d':.35),
         40px:('d':.80),
         42px:('d':.70)
+      ),
+  'Roboto': (
+        12px:('d':.70),
+        14px:('d':.65),
+        16px:('d':.65),
+        18px:('d':.60), 
+        20px:('d':.50),
+        22px:('d':.50),
+        24px:('d':.45),
+        26px:('d':.85),
+        28px:('d':.88),
+        30px:('d':.80),
+        32px:('d':.70),
+        34px:('d':.65),
+        36px:('d':.65),
+        38px:('d':.60),
+        40px:('d':.05),
+        42px:('d':.00),
+        44px:('d':.95),
+        46px:('d':.85),
+        48px:('d':.85),
+        60px:('d':.00),
+        122px:('d':.55)
       )
   );
