--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -607,6 +607,7 @@ $base-base-fonts: (
         46px:('d':.85),
         48px:('d':.85),
         60px:('d':.00),
+        80px:('d':.05),
         122px:('d':.55)
       )
   );
