--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -305,6 +305,25 @@ $base-base-fonts: (
     42px:('d':.90),
     72px:('d':.3)
     ),
+  'adelle-sans':(
+    12px:('d':.7),
+    14px:('d':.65),
+    16px:('d':.55),
+    18px:('d':.50),
+    20px:('d':.45),
+    22px:('d':.45),
+    24px:('d':.35),
+    26px:('d':.75),
+    28px:('d':.70),
+    30px:('d':.65),
+    32px:('d':.65),
+    34px:('d':.60),
+    36px:('d':.50),
+    38px:('d':.45),
+    40px:('d':.85),
+    42px:('d':.85),
+    72px:('d':0)
+    ),
   'Lato':(
     12px:('d':.7),
     14px:('d':.65, 1:.15),
