--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -307,6 +307,7 @@ $base-base-fonts: (
     ),
   'adelle-sans':(
     12px:('d':.7),
+    13px:('d':.65, 1:.15),
     14px:('d':.65),
     16px:('d':.55),
     18px:('d':.50),
@@ -385,6 +386,7 @@ $base-base-fonts: (
     ),
   'lft-etica':(
     12px:('d':.7),
+    13px:('d':.7),
     14px:('d':.65),
     16px:('d':.65),
     18px:('d':.6),
