--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -297,12 +297,12 @@ $base-base-fonts: (
     26px:('d':.85),
     28px:('d':.85),
     30px:('d':.75),
-    32px:('d':.70),
+    32px:('d':.70, 2:.20),
     34px:('d':.70),
     36px:('d':.60),
     38px:('d':.60),
     40px:('d':0),
-    42px:('d':.90),
+    42px:('d':.90, 3:.40),
     72px:('d':.3)
     ),
   'adelle-sans':(
