--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -303,6 +303,7 @@ $base-base-fonts: (
     38px:('d':.60),
     40px:('d':0),
     42px:('d':.90, 3:.40),
+    64px:('d':.00),
     72px:('d':.3)
     ),
   'adelle-sans':(
