--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -134,6 +134,7 @@ $base-base-fonts: (
     ),
   'Open Sans':(
     12px:('d':.70),
+    13px:('d':.65),
     14px:('d':.60),
     16px:('d':.55),
     18px:('d':.50),
@@ -149,6 +150,7 @@ $base-base-fonts: (
     38px:('d':.40),
     40px:('d':.90),
     42px:('d':.85),
+    48px:('d':.70),
     56px:('d':.90, 3: .90)
     ),
   'open-sans':(
