adding font setting

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -110,6 +110,8 @@ $base-base-fonts: (
     38px:('d':.60),
     40px:('d':.00),
     42px:('d':.00),
+    46px:('d':.90),
+    48px:('d':.80),
     72px:('d':.20)
     ),
   'museo-sans':(
@@ -155,6 +157,7 @@ $base-base-fonts: (
     ),
   'open-sans':(
     12px:('d':.70),
+    13px:('d':.65),
     14px:('d':.60),
     16px:('d':.55),
     18px:('d':.50),
@@ -170,6 +173,7 @@ $base-base-fonts: (
     38px:('d':.40),
     40px:('d':.90),
     42px:('d':.85),
+    48px:('d':.70),
     56px:('d':.90, 3: .90)
     ),
   'Open Sans Condensed':(
