--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -102,7 +102,7 @@ $base-base-fonts: (
     22px:('d':.50),
     24px:('d':.40),
     26px:('d':.90),
-    28px:('d':.80),
+    28px:('d':.80, 2:.35),
     30px:('d':.80),
     32px:('d':.70),
     34px:('d':.70),
