--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -616,6 +616,7 @@ $base-base-fonts: (
       ),
   'Roboto': (
         12px:('d':.70),
+        13px:('d':.70),
         14px:('d':.65),
         16px:('d':.65),
         18px:('d':.60), 
