--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -639,4 +639,24 @@ $base-base-fonts: (
         80px:('d':.05),
         122px:('d':.55)
       )
+  'raleway':(
+    12px:('d':p2b(10px)),
+    13px:('d':p2b(10px)),
+    14px:('d':p2b(9px)),
+    16px:('d':p2b(9px)),
+    18px:('d':p2b(8px)),
+    20px:('d':p2b(7px)),
+    22px:('d':p2b(6px)),
+    24px:('d':p2b(6px)),
+    26px:('d':p2b(12px)),
+    28px:('d':p2b(12px)),
+    30px:('d':p2b(11px)),
+    32px:('d':p2b(10px)),
+    34px:('d':p2b(9px)),
+    36px:('d':p2b(8px)),
+    38px:('d':p2b(8px)),
+    40px:('d':p2b(0px)),
+    42px:('d':p2b(0px)),
+    48px:('d':p2b(11px))
+    ),
   );
