--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -34,10 +34,10 @@ $base-base-fonts: (
     11px:('d':.75),
     12px:('d':.73),
     13px:('d':.70),
-    14px:('d':.65),
+    14px:('d':.65, 1: .2),
     16px:('d':.67),
     17px:('d':.60),
-    18px:('d':.60),
+    18px:('d':.60, 1: .1),
     20px:('d':.60),
     21px:('d':.55),
     22px:('d':.55),
