--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -5,7 +5,7 @@ $base-base-fonts: (
     12px:('d':.70),
     13px:('d':.70),
     14px:('d':.65),
-    16px:('d':.60),
+    16px:('d':.60, 1:.1),
     18px:('d':.60),
     20px:('d':.50),
     22px:('d':.40),
