--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -659,4 +659,24 @@ $base-base-fonts: (
     42px:('d':p2b(0px)),
     48px:('d':p2b(11px))
     ),
+  'chaparral-pro':(
+    12px:('d':p2b(11px)),
+    14px:('d':p2b(10px)),
+    16px:('d':p2b(10px)),
+    18px:('d':p2b(10px)),
+    20px:('d':p2b(9px)),
+    22px:('d':p2b(8px)),
+    24px:('d':p2b(8px)),
+    26px:('d':p2b(0px)),
+    28px:('d':p2b(0px)),
+    30px:('d':p2b(13px)),
+    32px:('d':p2b(13px)),
+    34px:('d':p2b(12px)),
+    36px:('d':p2b(11px)),
+    38px:('d':p2b(11px)),
+    40px:('d':p2b(4px)),
+    42px:('d':p2b(3px)),
+    48px:('d':p2b(2px)),
+    58px:('d':p2b(6px)),
+    )
   );
