--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -1,5 +1,5 @@
 $base-base-fonts: (
-  //PT Sans
+  //pt sans
   'pt-sans':(
     11px:('d':.72),
     12px:('d':.70),
@@ -134,27 +134,6 @@ $base-base-fonts: (
     48px:('d':.85),
     72px:('d':.20)
     ),
-  'Open Sans':(
-    12px:('d':.70),
-    13px:('d':.65),
-    14px:('d':.60),
-    16px:('d':.55),
-    18px:('d':.50),
-    20px:('d':.50),
-    22px:('d':.35),
-    24px:('d':.35),
-    26px:('d':.80),
-    28px:('d':.70),
-    30px:('d':.70),
-    32px:('d':.65),
-    34px:('d':.60),
-    36px:('d':.55),
-    38px:('d':.40),
-    40px:('d':.90),
-    42px:('d':.85),
-    48px:('d':.70),
-    56px:('d':.90, 3: .90)
-    ),
   'open-sans':(
     12px:('d':.70),
     13px:('d':.65),
@@ -176,7 +155,7 @@ $base-base-fonts: (
     48px:('d':.70),
     56px:('d':.90, 3: .90)
     ),
-  'Open Sans Condensed':(
+  'open-sans-condensed':(
     12px:('d':.70),
     14px:('d':.60),
     16px:('d':.55),
@@ -218,7 +197,7 @@ $base-base-fonts: (
     50px:('d':.05),
     96px:('d':.15, 6:.10)
     ),
-  'Verdana':(
+  'verdana':(
     12px:('d':.70),
     14px:('d':.65),
     16px:('d':.60),
@@ -255,7 +234,7 @@ $base-base-fonts: (
     42px:('d':0),
     72px:('d':.20)
     ),
-  'Merriweather':(
+  'merriweather':(
     12px:('d':.7),
     14px:('d':.65),
     16px:('d':.65),
@@ -273,7 +252,7 @@ $base-base-fonts: (
     40px:('d':0),
     42px:('d':0)
     ),
-  'Oswald':(
+  'oswald':(
     12px:('d':.65),
     14px:('d':.55),
     16px:('d':.5),
@@ -332,7 +311,7 @@ $base-base-fonts: (
     42px:('d':.85),
     72px:('d':0)
     ),
-  'Lato':(
+  'lato':(
     12px:('d':.7),
     14px:('d':.65, 1:.15),
     16px:('d':.60, 1:.05),
@@ -412,7 +391,7 @@ $base-base-fonts: (
     48px:('d':.85),
     56px:('d':.1)
     ),
-  'Ubuntu': (
+  'ubuntu': (
     11px:('d':.32),
     12px:('d':.7),
     13px:('d':.29),
@@ -490,28 +469,6 @@ $base-base-fonts: (
     42px:('d':.90),
     48px:('d':.75)
     ),
-  'Source Sans Pro': (
-    12px:('d':.70),
-    14px:('d':.65),
-    16px:('d':.60),
-    18px:('d':.60), 
-    20px:('d':.50),
-    22px:('d':.40),
-    24px:('d':.40),
-    26px:('d':.85),
-    28px:('d':.80),
-    30px:('d':.70),
-    32px:('d':.70),
-    34px:('d':.65),
-    36px:('d':.65),
-    38px:('d':.55),
-    40px:('d':.00),
-    42px:('d':.95),
-    44px:('d':.90),
-    46px:('d':.85),
-    48px:('d':.75),
-    72px:('d':.20)
-    ),
   'source-sans-pro': (
     12px:('d':.70),
     14px:('d':.65),
@@ -534,7 +491,7 @@ $base-base-fonts: (
     48px:('d':.75),
     72px:('d':.20)
     ),
-  'Oxygen': (
+  'oxygen': (
     12px:('d':.70),
     14px:('d':.65),
     16px:('d':.55),
@@ -552,11 +509,11 @@ $base-base-fonts: (
     40px:('d':.85),
     42px:('d':.85)
     ),
-  'Courier': (
+  'courier': (
       12px:('d':.65),
       14px:('d':.55)
       ),
-  'Courier New': (
+  'courier-new': (
       12px:('d':.80),
       14px:('d':.70),
       16px:('d':.70),
@@ -614,7 +571,7 @@ $base-base-fonts: (
     40px:('d':.80),
     42px:('d':.70)
     ),
-  'Roboto': (
+  'roboto': (
     12px:('d':.70),
     13px:('d':.70),
     14px:('d':.65),
