--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -312,27 +312,28 @@ $base-base-fonts: (
     72px:('d':0)
     ),
   'lato':(
-    12px:('d':.7),
-    14px:('d':.65, 1:.15),
-    16px:('d':.60, 1:.05),
-    18px:('d':.50),
-    20px:('d':.45),
-    22px:('d':.45),
-    24px:('d':.35),
-    26px:('d':.80),
-    28px:('d':.70),
-    30px:('d':.65, 2:.15),
-    32px:('d':.65),
-    34px:('d':.55),
-    36px:('d':.50),
-    38px:('d':.45),
-    40px:('d':.95),
-    42px:('d':.85),
-    44px:('d':.80),
-    46px:('d':.80),
-    48px:('d':.70),
-    50px:('d':.65),
-    60px:('d':.85)
+    12px:('d':p2b(10px)),
+    14px:('d':p2b(8px), 1:p2b(2px)),
+    16px:('d':p2b(8px), 1:p2b(1px)),
+    18px:('d':p2b(7px)),
+    20px:('d':p2b(6px)),
+    22px:('d':p2b(5px)),
+    24px:('d':p2b(4px)),
+    26px:('d':p2b(11px)),
+    28px:('d':p2b(10px)),
+    30px:('d':p2b(9px), 2:p2b(2px)),
+    32px:('d':p2b(8px)),
+    34px:('d':p2b(7px)),
+    36px:('d':p2b(7px)),
+    38px:('d':p2b(6px)),
+    40px:('d':p2b(12px)),
+    42px:('d':p2b(11px)),
+    44px:('d':p2b(11px)),
+    46px:('d':p2b(11px)),
+    48px:('d':p2b(8px)),
+    50px:('d':p2b(9px)),
+    58px:('d':p2b(10px)),
+    60px:('d':p2b(12px))
     ),
   'adobe-caslon-pro':(
      12px:('d':.83),
@@ -634,6 +635,6 @@ $base-base-fonts: (
     40px:('d':p2b(4px)),
     42px:('d':p2b(3px)),
     48px:('d':p2b(2px)),
-    58px:('d':p2b(6px)),
-    )
+    58px:('d':p2b(6px))
+    ),
   );
