--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -32,25 +32,25 @@ $base-base-fonts: (
   // proxima-nova
   'proxima-nova':(
     11px:('d':.75),
-    12px:('d':.73),
+    12px:('d':p2b(10px)),
     13px:('d':.70),
-    14px:('d':.65, 1: .2),
-    16px:('d':.67),
+    14px:('d':p2b(10px), 1: .2),
+    16px:('d':p2b(9px)),
     17px:('d':.60),
-    18px:('d':.60, 1: .1),
-    20px:('d':.60),
+    18px:('d':p2b(8px), 1: .1),
+    20px:('d':p2b(8px)),
     21px:('d':.55),
-    22px:('d':.55),
-    24px:('d':.50, 3:0),
-    26px:('d':.90),
-    28px:('d':.90),
-    30px:('d':.85),
-    32px:('d':.85),
-    34px:('d':.78),
-    36px:('d':.70),
-    38px:('d':.70),
-    40px:('d':.15),
-    42px:('d':.00),
+    22px:('d':p2b(7px)),
+    24px:('d':p2b(7px), 3:0),
+    26px:('d':p2b(13px)),
+    28px:('d':p2b(12px)),
+    30px:('d':p2b(12px)),
+    32px:('d':p2b(11px)),
+    34px:('d':p2b(11px)),
+    36px:('d':p2b(10px)),
+    38px:('d':p2b(9px)),
+    40px:('d':p2b(1px)),
+    42px:('d':p2b(1px)),
     44px:('d':.00),
     46px:('d':.00),
     48px:('d':.90),
@@ -58,10 +58,29 @@ $base-base-fonts: (
     52px:('d':.85),
     54px:('d':.30),
     56px:('d':.20),
-    58px:('d':.15),
+    58px:('d':p2b(2px)),
     60px:('d':.20),
     70px:('d':.50),
     72px:('d':.35)
+    ),
+  'proxima-nova-condensed':(
+    12px:('d':p2b(11px)),
+    14px:('d':p2b(10px)),
+    16px:('d':p2b(10px)),
+    18px:('d':p2b(10px)),
+    20px:('d':p2b(9px)),
+    22px:('d':p2b(9px)),
+    24px:('d':p2b(8px)),
+    26px:('d':p2b(0px)),
+    28px:('d':p2b(0px)),
+    30px:('d':p2b(0px)),
+    32px:('d':p2b(13px)),
+    34px:('d':p2b(12px)),
+    36px:('d':p2b(12px)),
+    38px:('d':p2b(11px)),
+    40px:('d':p2b(4px)),
+    42px:('d':p2b(3px)),
+    78px:('d':p2b(8px))
     ),
   'georgia':(
     11px:('d':.70),
