--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -80,6 +80,7 @@ $base-base-fonts: (
     38px:('d':p2b(11px)),
     40px:('d':p2b(4px)),
     42px:('d':p2b(3px)),
+    64px:('d':p2b(5px)),
     78px:('d':p2b(8px))
     ),
   'georgia':(
