--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -657,4 +657,24 @@ $base-base-fonts: (
     48px:('d':p2b(2px)),
     58px:('d':p2b(6px))
     ),
+  'sofia-pro':(
+    12px:('d':p2b(9px)),
+    14px:('d':p2b(8px)),
+    16px:('d':p2b(8px)),
+    18px:('d':p2b(7px)),
+    20px:('d':p2b(6px)),
+    22px:('d':p2b(5px)),
+    24px:('d':p2b(4px)),
+    26px:('d':p2b(10px)),
+    28px:('d':p2b(9px)),
+    30px:('d':p2b(9px)),
+    32px:('d':p2b(8px)),
+    34px:('d':p2b(7px)),
+    36px:('d':p2b(6px)),
+    38px:('d':p2b(5px)),
+    40px:('d':p2b(11px)),
+    42px:('d':p2b(11px)),
+    52px:('d':p2b(7px)),
+    56px:('d':p2b(12px)),
+    )
   );
