--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -677,5 +677,26 @@ $base-base-fonts: (
     42px:('d':p2b(11px)),
     52px:('d':p2b(7px)),
     56px:('d':p2b(12px)),
+    ),
+  'jaf-bernino-sans':(
+    12px:('d':p2b(10px)),
+    14px:('d':p2b(10px)),
+    16px:('d':p2b(9px)),
+    18px:('d':p2b(9px)),
+    20px:('d':p2b(8px)),
+    22px:('d':p2b(7px)),
+    24px:('d':p2b(6px)),
+    26px:('d':p2b(13px)),
+    28px:('d':p2b(12px)),
+    30px:('d':p2b(11px)),
+    32px:('d':p2b(11px)),
+    34px:('d':p2b(10px)),
+    36px:('d':p2b(9px)),
+    38px:('d':p2b(9px)),
+    40px:('d':p2b(1px),3:p2b(8px)),
+    42px:('d':p2b(1px)),
+    52px:('d':p2b(0px)),
+    56px:('d':p2b(3px)),
+    72px:('d':p2b(5px)),
     )
   );
