--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -314,7 +314,7 @@ $base-base-fonts: (
   'adelle-sans':(
     12px:('d':p2b(10px)),
     13px:('d':p2b(9px), 1:p2b(2px)),
-    14px:('d':p2b(9px)),
+    14px:('d':p2b(9px), 1:p2b(2px)),
     16px:('d':p2b(8px)),
     18px:('d':p2b(7px)),
     20px:('d':p2b(6px)),
