--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -1,65 +1,65 @@
 $base-base-fonts: (
   //pt sans
   'pt-sans':(
-    11px:('d':.72),
+    11px:('d':p2b(1px)),
     12px:('d':p2b(10px)),
     13px:('d':p2b(10px)),
     14px:('d':p2b(9px)),
-    16px:('d':p2b(8px), 1:.1),
+    16px:('d':p2b(8px), 1:p2b(1px)),
     18px:('d':p2b(8px)),
     20px:('d':p2b(7px)),
     22px:('d':p2b(6px)),
     24px:('d':p2b(6px)),
     26px:('d':p2b(12px)),
     28px:('d':p2b(8px)),
-    30px:('d':.74),
-    32px:('d':.74),
+    30px:('d':p2b(10px)),
+    32px:('d':p2b(10px)),
     34px:('d':p2b(9px)),
     36px:('d':p2b(9px)),
-    38px:('d':.57),
-    40px:('d':.1),
-    42px:('d':.1),
+    38px:('d':p2b(8px)),
+    40px:('d':p2b(1px)),
+    42px:('d':p2b(1px)),
     44px:('d':p2b(12px)),
     46px:('d':p2b(8px)),
     48px:('d':p2b(10px)),
     50px:('d':p2b(10px)),
     52px:('d':p2b(9px)),
-    54px:('d':.05),
+    54px:('d':p2b(1px)),
     56px:('d':.0, 4:0p2b(6px)),
     58px:('d':.0),
-    60px:('d':0.9)
+    60px:('d':p2b(13px))
     ),
   // proxima-nova
   'proxima-nova':(
     11px:('d':p2b(11px)),
-    12px:('d':.73),
+    12px:('d':p2b(10px)),
     13px:('d':p2b(10px)),
-    14px:('d':p2b(9px), 1: .2),
-    16px:('d':.67),
+    14px:('d':p2b(9px), 1: p2b(3px)),
+    16px:('d':p2b(9px)),
     17px:('d':p2b(8px)),
-    18px:('d':p2b(8px), 1: .1),
+    18px:('d':p2b(8px), 1: p2b(1px)),
     20px:('d':p2b(8px)),
-    21px:('d':.55),
-    22px:('d':.55),
+    21px:('d':p2b(8px)),
+    22px:('d':p2b(8px)),
     24px:('d':p2b(7px), 3:0),
-    26px:('d':.90),
-    28px:('d':.90),
+    26px:('d':p2b(13px)),
+    28px:('d':p2b(13px)),
     30px:('d':p2b(12px)),
     32px:('d':p2b(12px)),
-    34px:('d':.78),
+    34px:('d':p2b(11px)),
     36px:('d':p2b(10px)),
     38px:('d':p2b(10px)),
     40px:('d':p2b(2px)),
     42px:('d':.00),
     44px:('d':.00),
     46px:('d':.00),
-    48px:('d':.90),
-    50px:('d':.90),
+    48px:('d':p2b(13px)),
+    50px:('d':p2b(13px)),
     52px:('d':p2b(12px)),
-    54px:('d':.30),
-    56px:('d':.20),
+    54px:('d':p2b(4px)),
+    56px:('d':p2b(3px)),
     58px:('d':p2b(2px)),
-    60px:('d':.20),
+    60px:('d':p2b(3px)),
     70px:('d':p2b(7px)),
     72px:('d':p2b(5px))
     ),
@@ -85,24 +85,24 @@ $base-base-fonts: (
     ),
   'georgia':(
     11px:('d':p2b(10px)),
-    12px:('d':.7),
+    12px:('d':p2b(10px)),
     13px:('d':p2b(10px)),
     14px:('d':p2b(9px)),
     16px:('d':p2b(9px)),
     18px:('d':p2b(8px)),
-    20px:('d':.52),
+    20px:('d':p2b(7px)),
     22px:('d':p2b(7px)),
     24px:('d':p2b(6px)),
-    26px:('d':.89),
-    28px:('d':.82),
+    26px:('d':p2b(12px)),
+    28px:('d':p2b(11px)),
     30px:('d':p2b(8px)),
-    32px:('d':.73),
+    32px:('d':p2b(10px)),
     34px:('d':p2b(9px)),
     36px:('d':p2b(9px)),
     38px:('d':p2b(8px)),
     40px:('d':.00),
-    42px:('d':.90),
-    44px:('d':.90),
+    42px:('d':p2b(13px)),
+    44px:('d':p2b(13px)),
     46px:('d':p2b(8px)),
     48px:('d':p2b(12px)),
     50px:('d':p2b(8px)),
@@ -111,7 +111,8 @@ $base-base-fonts: (
     56px:('d':p2b(2px)),
     58px:('d':.00),
     60px:('d':.00),
-    108pt:('d':.30)
+    72px:('d':p2b(3px)),
+    108pt:('d':p2b(4px))
     ),
   'museo-sans-rounded':(
     12px:('d':p2b(10px)),
@@ -121,7 +122,7 @@ $base-base-fonts: (
     20px:('d':p2b(7px)),
     22px:('d':p2b(7px)),
     24px:('d':p2b(6px)),
-    26px:('d':.90),
+    26px:('d':p2b(13px)),
     28px:('d':p2b(8px), 2:p2b(5px)),
     30px:('d':p2b(8px)),
     32px:('d':p2b(10px)),
@@ -130,9 +131,9 @@ $base-base-fonts: (
     38px:('d':p2b(8px)),
     40px:('d':.00),
     42px:('d':.00),
-    46px:('d':.90),
+    46px:('d':p2b(13px)),
     48px:('d':p2b(8px)),
-    72px:('d':.20)
+    72px:('d':p2b(3px))
     ),
   'museo-sans':(
     12px:('d':p2b(10px)),
@@ -142,7 +143,7 @@ $base-base-fonts: (
     20px:('d':p2b(7px)),
     22px:('d':p2b(7px)),
     24px:('d':p2b(6px)),
-    26px:('d':.90),
+    26px:('d':p2b(13px)),
     28px:('d':p2b(8px)),
     30px:('d':p2b(8px)),
     32px:('d':p2b(10px)),
@@ -152,13 +153,13 @@ $base-base-fonts: (
     40px:('d':.00),
     42px:('d':.00),
     48px:('d':p2b(12px)),
-    72px:('d':.20)
+    72px:('d':p2b(3px))
     ),
   'open-sans':(
     12px:('d':p2b(10px)),
     13px:('d':p2b(9px)),
     14px:('d':p2b(8px)),
-    16px:('d':.55),
+    16px:('d':p2b(8px)),
     18px:('d':p2b(7px)),
     20px:('d':p2b(7px)),
     22px:('d':p2b(5px)),
@@ -168,17 +169,17 @@ $base-base-fonts: (
     30px:('d':p2b(10px)),
     32px:('d':p2b(9px)),
     34px:('d':p2b(8px)),
-    36px:('d':.55),
+    36px:('d':p2b(8px)),
     38px:('d':p2b(6px)),
-    40px:('d':.90),
+    40px:('d':p2b(13px)),
     42px:('d':p2b(12px)),
     48px:('d':p2b(10px)),
-    56px:('d':.90, 3: .90)
+    56px:('d':p2b(13px), 3: p2b(13px))
     ),
   'open-sans-condensed':(
     12px:('d':p2b(10px)),
     14px:('d':p2b(8px)),
-    16px:('d':.55),
+    16px:('d':p2b(8px)),
     18px:('d':p2b(7px)),
     20px:('d':p2b(7px)),
     22px:('d':p2b(5px)),
@@ -188,11 +189,11 @@ $base-base-fonts: (
     30px:('d':p2b(10px)),
     32px:('d':p2b(9px)),
     34px:('d':p2b(8px)),
-    36px:('d':.55),
+    36px:('d':p2b(8px)),
     38px:('d':p2b(6px)),
-    40px:('d':.90),
+    40px:('d':p2b(13px)),
     42px:('d':p2b(12px)),
-    56px:('d':.90, 3: .90)
+    56px:('d':p2b(13px), 3: p2b(13px))
     ),
   'alternate-gothic-no-2-d':(
     12px:('d':p2b(11px)),
@@ -202,19 +203,19 @@ $base-base-fonts: (
     20px:('d':p2b(9px)),
     22px:('d':p2b(8px)),
     24px:('d':p2b(8px)),
-    26px:('d':.05),
+    26px:('d':p2b(1px)),
     28px:('d':.00),
-    30px:('d':.90),
-    32px:('d':.90),
+    30px:('d':p2b(13px)),
+    32px:('d':p2b(13px)),
     34px:('d':p2b(12px)),
     36px:('d':p2b(12px)),
     38px:('d':p2b(8px)),
-    40px:('d':.25),
-    42px:('d':.20),
-    44px:('d':.20),
+    40px:('d':p2b(4px)),
+    42px:('d':p2b(3px)),
+    44px:('d':p2b(3px)),
     46px:('d':p2b(2px)),
     48px:('d':p2b(2px)),
-    50px:('d':.05),
+    50px:('d':p2b(1px)),
     96px:('d':p2b(2px), 6:p2b(1px))
     ),
   'verdana':(
@@ -226,14 +227,14 @@ $base-base-fonts: (
     22px:('d':p2b(6px)),
     24px:('d':.39),
     26px:('d':p2b(8px)),
-    28px:('d':.72),
+    28px:('d':p2b(1px)),
     30px:('d':.64),
     32px:('d':.62),
     34px:('d':p2b(8px)),
     36px:('d':p2b(7px)),
     38px:('d':p2b(6px)),
     40px:('d':p2b(12px)),
-    48px:('d':.90)
+    48px:('d':p2b(13px))
     ),
   'refrigerator-deluxe':(
     12px:('d':.7),
@@ -252,7 +253,7 @@ $base-base-fonts: (
     38px:('d':p2b(8px)),
     40px:('d':0),
     42px:('d':0),
-    72px:('d':.20)
+    72px:('d':p2b(3px))
     ),
   'merriweather':(
     12px:('d':.7),
@@ -274,15 +275,15 @@ $base-base-fonts: (
     ),
   'oswald':(
     12px:('d':p2b(9px)),
-    14px:('d':.55),
+    14px:('d':p2b(8px)),
     16px:('d':.5),
     18px:('d':p2b(6px)),
     20px:('d':p2b(5px)),
     22px:('d':.3),
-    24px:('d':.25),
+    24px:('d':p2b(4px)),
     26px:('d':p2b(10px)),
     28px:('d':p2b(9px)),
-    30px:('d':.55),
+    30px:('d':p2b(8px)),
     32px:('d':.5),
     34px:('d':p2b(6px)),
     36px:('d':p2b(5px)),
@@ -295,19 +296,19 @@ $base-base-fonts: (
     12px:('d':.7),
     14px:('d':p2b(9px)),
     16px:('d':p2b(9px)),
-    18px:('d':.55),
+    18px:('d':p2b(8px)),
     20px:('d':p2b(7px)),
     22px:('d':p2b(7px)),
     24px:('d':p2b(6px)),
     26px:('d':p2b(12px)),
     28px:('d':p2b(12px)),
     30px:('d':p2b(11px)),
-    32px:('d':p2b(10px), 2:.20),
+    32px:('d':p2b(10px), 2:p2b(3px)),
     34px:('d':p2b(10px)),
     36px:('d':p2b(8px)),
     38px:('d':p2b(8px)),
     40px:('d':0),
-    42px:('d':.90, 3:p2b(6px)),
+    42px:('d':p2b(13px), 3:p2b(6px)),
     64px:('d':.00),
     72px:('d':.3)
     ),
@@ -363,9 +364,9 @@ $base-base-fonts: (
      20px:('d':p2b(8px)),
      22px:('d':p2b(8px)),
      24px:('d':p2b(8px)),
-     26px:('d':.20),
-     28px:('d':.20),
-     30px:('d':.20),
+     26px:('d':p2b(3px)),
+     28px:('d':p2b(3px)),
+     30px:('d':p2b(3px)),
      32px:('d':p2b(2px)),
      34px:('d':p2b(2px)),
      36px:('d':p2b(2px)),
@@ -418,7 +419,7 @@ $base-base-fonts: (
     12px:('d':.7),
     13px:('d':.29),
     14px:('d':p2b(9px)),
-    16px:('d':.55),
+    16px:('d':p2b(8px)),
     18px:('d':.47), 
     20px:('d':.47),
     22px:('d':p2b(6px)),
@@ -427,11 +428,11 @@ $base-base-fonts: (
     28px:('d':p2b(11px)),
     30px:('d':p2b(10px)),
     32px:('d':p2b(9px)),
-    34px:('d':.55),
+    34px:('d':p2b(8px)),
     36px:('d':p2b(7px)),
     38px:('d':p2b(6px)),
-    40px:('d':.90),
-    42px:('d':.90)
+    40px:('d':p2b(13px)),
+    42px:('d':p2b(13px))
     ),
   'adobe-garamond-pro': (
     11px:('d':.8),
@@ -440,24 +441,24 @@ $base-base-fonts: (
     16px:('d':.7),
     18px:('d':p2b(9px)), 
     20px:('d':p2b(9px)),
-    22px:('d':.55),
+    22px:('d':p2b(8px)),
     24px:('d':p2b(7px)),
     26px:('d':.00),
-    28px:('d':.90),
-    30px:('d':.90),
+    28px:('d':p2b(13px)),
+    30px:('d':p2b(13px)),
     32px:('d':p2b(12px)),
     34px:('d':p2b(12px)),
     36px:('d':p2b(8px)),
     38px:('d':p2b(10px)),
-    40px:('d':.20),
+    40px:('d':p2b(3px)),
     42px:('d':p2b(2px)),
-    52px:('d':.90)
+    52px:('d':p2b(13px))
     ),
   'droid-sans': (
     12px:('d':p2b(10px)),
     14px:('d':p2b(9px)),
     16px:('d':p2b(9px)),
-    18px:('d':.55), 
+    18px:('d':p2b(8px)), 
     20px:('d':p2b(7px)),
     22px:('d':p2b(7px)),
     24px:('d':p2b(6px)),
@@ -467,7 +468,7 @@ $base-base-fonts: (
     32px:('d':p2b(10px)),
     34px:('d':p2b(10px)),
     36px:('d':p2b(9px)),
-    38px:('d':.55),
+    38px:('d':p2b(8px)),
     40px:('d':.00),
     42px:('d':.00)
     ),
@@ -476,7 +477,7 @@ $base-base-fonts: (
     12px:('d':p2b(10px)),
     14px:('d':p2b(9px)),
     16px:('d':p2b(9px)),
-    18px:('d':.55), 
+    18px:('d':p2b(8px)), 
     20px:('d':p2b(7px)),
     22px:('d':p2b(7px)),
     24px:('d':p2b(6px)),
@@ -486,9 +487,9 @@ $base-base-fonts: (
     32px:('d':p2b(10px)),
     34px:('d':p2b(9px)),
     36px:('d':p2b(8px)),
-    38px:('d':.55),
+    38px:('d':p2b(8px)),
     40px:('d':.00),
-    42px:('d':.90),
+    42px:('d':p2b(13px)),
     48px:('d':p2b(11px))
     ),
   'source-sans-pro': (
@@ -505,18 +506,18 @@ $base-base-fonts: (
     32px:('d':p2b(10px)),
     34px:('d':p2b(9px)),
     36px:('d':p2b(9px)),
-    38px:('d':.55),
+    38px:('d':p2b(8px)),
     40px:('d':.00),
-    42px:('d':.95),
-    44px:('d':.90),
+    42px:('d':p2b(13px)),
+    44px:('d':p2b(13px)),
     46px:('d':p2b(12px)),
     48px:('d':p2b(11px)),
-    72px:('d':.20)
+    72px:('d':p2b(3px))
     ),
   'oxygen': (
     12px:('d':p2b(10px)),
     14px:('d':p2b(9px)),
-    16px:('d':.55),
+    16px:('d':p2b(8px)),
     18px:('d':p2b(7px)), 
     20px:('d':p2b(6px)),
     22px:('d':p2b(5px)),
@@ -525,7 +526,7 @@ $base-base-fonts: (
     28px:('d':p2b(10px)),
     30px:('d':p2b(9px)),
     32px:('d':p2b(9px)),
-    34px:('d':.55),
+    34px:('d':p2b(8px)),
     36px:('d':p2b(7px)),
     38px:('d':p2b(6px)),
     40px:('d':p2b(12px)),
@@ -533,7 +534,7 @@ $base-base-fonts: (
     ),
   'courier': (
       12px:('d':p2b(9px)),
-      14px:('d':.55)
+      14px:('d':p2b(8px))
       ),
   'courier-new': (
       12px:('d':p2b(8px)),
@@ -542,23 +543,23 @@ $base-base-fonts: (
       18px:('d':p2b(9px)), 
       20px:('d':p2b(9px)),
       22px:('d':p2b(9px)),
-      24px:('d':.55),
+      24px:('d':p2b(8px)),
       26px:('d':.00),
       28px:('d':.00),
-      30px:('d':.90),
-      32px:('d':.90),
+      30px:('d':p2b(13px)),
+      32px:('d':p2b(13px)),
       34px:('d':p2b(12px)),
       36px:('d':p2b(12px)),
       38px:('d':p2b(11px)),
-      40px:('d':.30),
-      42px:('d':.20)
+      40px:('d':p2b(4px)),
+      42px:('d':p2b(3px))
       ),
   'ff-tisa-sans-web-pro': (
-    10px:('d':.20),
+    10px:('d':p2b(3px)),
     12px:('d':p2b(10px)),
     14px:('d':p2b(9px)),
-    16px:('d':.55),
-    17px:('d':.55), 
+    16px:('d':p2b(8px)),
+    17px:('d':p2b(8px)), 
     18px:('d':p2b(7px)), 
     20px:('d':p2b(7px)),
     22px:('d':p2b(6px)),
@@ -567,14 +568,14 @@ $base-base-fonts: (
     28px:('d':p2b(10px)),
     30px:('d':p2b(10px)),
     32px:('d':p2b(9px)),
-    34px:('d':.55),
-    36px:('d':.55),
+    34px:('d':p2b(8px)),
+    36px:('d':p2b(8px)),
     38px:('d':p2b(7px)),
-    40px:('d':.90),
+    40px:('d':p2b(13px)),
     42px:('d':p2b(12px))
     ),
   'ff-tisa-web-pro': (
-    10px:('d':.20),
+    10px:('d':p2b(3px)),
     12px:('d':p2b(9px)),
     14px:('d':p2b(8px)),
     16px:('d':p2b(7px)),
@@ -582,11 +583,11 @@ $base-base-fonts: (
     18px:('d':p2b(7px)), 
     20px:('d':p2b(6px)),
     22px:('d':p2b(5px)),
-    24px:('d':.30),
+    24px:('d':p2b(4px)),
     26px:('d':p2b(10px)),
     28px:('d':p2b(9px)),
     30px:('d':p2b(8px)),
-    32px:('d':.55),
+    32px:('d':p2b(8px)),
     34px:('d':p2b(7px)),
     36px:('d':p2b(6px)),
     38px:('d':p2b(5px)),
@@ -603,21 +604,22 @@ $base-base-fonts: (
     22px:('d':p2b(7px)),
     24px:('d':p2b(6px)),
     26px:('d':p2b(12px)),
-    28px:('d':.88),
+    28px:('d':p2b(12px)),
     30px:('d':p2b(8px)),
     32px:('d':p2b(10px)),
     34px:('d':p2b(9px)),
     36px:('d':p2b(9px)),
     38px:('d':p2b(8px)),
-    40px:('d':.05),
+    40px:('d':p2b(1px)),
     42px:('d':.00),
-    44px:('d':.95),
+    44px:('d':p2b(13px)),
     46px:('d':p2b(12px)),
     48px:('d':p2b(12px)),
     60px:('d':.00),
     64px:('d':.00),
-    80px:('d':.05),
-    122px:('d':.55)
+    72px:('d':p2b(4px)),
+    80px:('d':p2b(1px)),
+    122px:('d':p2b(8px))
     ),
   'raleway':(
     12px:('d':p2b(10px)),
