--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -2,7 +2,7 @@ $base-base-fonts-16: (
   'source-sans-pro': (
     12px:('d':p2b(4px)),
     14px:('d':p2b(11px)),
-    16px:('d':p2b(11px)),
+    16px:('d':p2b(10px), 1: p2b(2px)),
     18px:('d':p2b(10px)), 
     20px:('d':p2b(10px)),
     22px:('d':p2b(9px)),
@@ -16,5 +16,23 @@ $base-base-fonts-16: (
     38px:('d':p2b(11px)),
     40px:('d':p2b(10px)),
     42px:('d':p2b(10px))
+    ),
+  'oswald': (
+    12px:('d':p2b(2px)),
+    14px:('d':p2b(9px)),
+    16px:('d':p2b(8px)),
+    18px:('d':p2b(8px)), 
+    20px:('d':p2b(6px)),
+    22px:('d':p2b(5px)),
+    24px:('d':p2b(4px)),
+    26px:('d':p2b(4px)),
+    28px:('d':p2b(3px)),
+    30px:('d':p2b(10px)),
+    32px:('d':p2b(9px)),
+    34px:('d':p2b(8px)),
+    36px:('d':p2b(7px)),
+    38px:('d':p2b(6px)),
+    40px:('d':p2b(5px)),
+    42px:('d':p2b(4px))
     )
   );
