--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -3,6 +3,7 @@ $base-base-fonts-16: (
     12px:('d':p2b(4px)),
     14px:('d':p2b(11px)),
     16px:('d':p2b(10px), 1: p2b(2px)),
+    17px:('d':p2b(10px)), 
     18px:('d':p2b(10px)), 
     20px:('d':p2b(10px)),
     21px:('d':p2b(9px)),
@@ -16,7 +17,8 @@ $base-base-fonts-16: (
     36px:('d':p2b(12px)),
     38px:('d':p2b(11px)),
     40px:('d':p2b(10px)),
-    42px:('d':p2b(10px))
+    42px:('d':p2b(10px)),
+    60px:('d':p2b(10px))
     ),
   'oswald': (
     11px:('d':p2b(3px)),
