--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -1,7 +1,7 @@
 $base-base-fonts-16: (
   'source-sans-pro': (
     12px:('d':p2b(4px)),
-    14px:('d':p2b(11px)),
+    14px:('d':p2b(11px), 1: p2b(3px)),
     16px:('d':p2b(10px), 1: p2b(2px)),
     17px:('d':p2b(10px)), 
     18px:('d':p2b(10px)), 
