--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -4,7 +4,7 @@ $base-base-fonts-16: (
     14px:('d':p2b(11px), 1: p2b(3px)),
     16px:('d':p2b(10px), 1: p2b(2px)),
     17px:('d':p2b(10px)), 
-    18px:('d':p2b(10px)), 
+    18px:('d':p2b(10px), 1: p2b(2px)), 
     20px:('d':p2b(10px)),
     21px:('d':p2b(9px)),
     22px:('d':p2b(9px)),
