--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -38,5 +38,42 @@ $base-base-fonts-16: (
     38px:('d':p2b(6px)),
     40px:('d':p2b(5px)),
     42px:('d':p2b(4px))
+    ),
+  'raleway': (
+    11px:('d':p2b(5px)),
+    12px:('d':p2b(4px)),
+    14px:('d':p2b(11px)),
+    16px:('d':p2b(11px)),
+    18px:('d':p2b(10px)), 
+    20px:('d':p2b(9px)),
+    22px:('d':p2b(8px)),
+    24px:('d':p2b(8px)),
+    26px:('d':p2b(7px)),
+    28px:('d':p2b(7px)),
+    30px:('d':p2b(14px)),
+    32px:('d':p2b(13px)),
+    34px:('d':p2b(12px)),
+    36px:('d':p2b(11px)),
+    38px:('d':p2b(11px)),
+    40px:('d':p2b(10px)),
+    42px:('d':p2b(10px))
+    ),
+  'proxima-nova': (
+    12px:('d':p2b(4px)),
+    14px:('d':p2b(12px)),
+    16px:('d':p2b(11px)),
+    18px:('d':p2b(10px)), 
+    20px:('d':p2b(10px)),
+    22px:('d':p2b(9px)),
+    24px:('d':p2b(9px)),
+    26px:('d':p2b(8px)),
+    28px:('d':p2b(7px)),
+    30px:('d':p2b(15px)),
+    32px:('d':p2b(14px)),
+    34px:('d':p2b(14px)),
+    36px:('d':p2b(13px)),
+    38px:('d':p2b(12px)),
+    40px:('d':p2b(11px)),
+    42px:('d':p2b(11px))
     )
   );
