--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -61,6 +61,7 @@ $base-base-fonts-16: (
     ),
   'proxima-nova': (
     12px:('d':p2b(4px)),
+    13px:('d':p2b(11px)),
     14px:('d':p2b(12px), 1: p2b(4px)),
     16px:('d':p2b(11px), 1: p2b(3px)),
     18px:('d':p2b(10px)), 
@@ -75,6 +76,25 @@ $base-base-fonts-16: (
     36px:('d':p2b(13px)),
     38px:('d':p2b(12px)),
     40px:('d':p2b(11px)),
-    42px:('d':p2b(11px))
+    42px:('d':p2b(11px)),
+    56px:('d':p2b(14px))
+    ),
+  'proxima-nova-condensed': (
+    12px:('d':p2b(5px)),
+    14px:('d':p2b(12px)),
+    16px:('d':p2b(12px)),
+    18px:('d':p2b(12px)), 
+    20px:('d':p2b(11px)),
+    22px:('d':p2b(11px)),
+    24px:('d':p2b(10px)),
+    26px:('d':p2b(9px)),
+    28px:('d':p2b(9px)),
+    30px:('d':p2b(1px)),
+    32px:('d':p2b(0px)),
+    34px:('d':p2b(15px)),
+    36px:('d':p2b(15px)),
+    38px:('d':p2b(14px)),
+    40px:('d':p2b(14px)),
+    42px:('d':p2b(13px))
     )
   );
