--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -66,6 +66,7 @@ $base-base-fonts-16: (
     16px:('d':p2b(11px), 1: p2b(3px)),
     18px:('d':p2b(10px)), 
     20px:('d':p2b(10px)),
+    21px:('d':p2b(10px)),
     22px:('d':p2b(9px)),
     24px:('d':p2b(9px)),
     26px:('d':p2b(8px)),
@@ -77,7 +78,8 @@ $base-base-fonts-16: (
     38px:('d':p2b(12px)),
     40px:('d':p2b(11px)),
     42px:('d':p2b(11px)),
-    56px:('d':p2b(14px))
+    56px:('d':p2b(14px)),
+    64px:('d':p2b(4px))
     ),
   'proxima-nova-condensed': (
     12px:('d':p2b(5px)),
