--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -79,7 +79,7 @@ $base-base-fonts-16: (
     40px:('d':p2b(11px)),
     42px:('d':p2b(11px)),
     56px:('d':p2b(14px)),
-    64px:('d':p2b(4px))
+    64px:('d':p2b(4px), 4: p2b(11px))
     ),
   'proxima-nova-condensed': (
     12px:('d':p2b(5px)),
