--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -1,4 +1,23 @@
 $base-base-fonts-16: (
+    'aleo': (
+      12px:('d':p2b(4px)),
+      14px:('d':p2b(11px)),
+      16px:('d':p2b(10px)),
+      18px:('d':p2b(10px)), 
+      20px:('d':p2b(9px)),
+      22px:('d':p2b(8px)),
+      24px:('d':p2b(8px)),
+      26px:('d':p2b(7px)),
+      28px:('d':p2b(6px)),
+      30px:('d':p2b(13px)),
+      32px:('d':p2b(13px)),
+      34px:('d':p2b(12px)),
+      36px:('d':p2b(11px)),
+      38px:('d':p2b(11px)),
+      40px:('d':p2b(10px)),
+      42px:('d':p2b(9px)),
+      64px:('d':p2b(1px))
+      ),
   'source-sans-pro': (
     12px:('d':p2b(4px)),
     14px:('d':p2b(11px), 1: p2b(3px)),
@@ -38,6 +57,24 @@ $base-base-fonts-16: (
     38px:('d':p2b(6px)),
     40px:('d':p2b(5px)),
     42px:('d':p2b(4px))
+    ),
+  'open-sans': (
+    12px:('d':p2b(4px)),
+    14px:('d':p2b(11px)),
+    16px:('d':p2b(10px)),
+    18px:('d':p2b(9px)), 
+    20px:('d':p2b(9px)),
+    22px:('d':p2b(7px)),
+    24px:('d':p2b(7px)),
+    26px:('d':p2b(6px)),
+    28px:('d':p2b(5px)),
+    30px:('d':p2b(13px)),
+    32px:('d':p2b(12px)),
+    34px:('d':p2b(11px)),
+    36px:('d':p2b(11px)),
+    38px:('d':p2b(9px)),
+    40px:('d':p2b(9px)),
+    42px:('d':p2b(8px))
     ),
   'raleway': (
     11px:('d':p2b(5px)),
