--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -16,6 +16,7 @@ $base-base-fonts-16: (
       38px:('d':p2b(11px)),
       40px:('d':p2b(10px)),
       42px:('d':p2b(9px)),
+      44px:('d':p2b(9px)),
       64px:('d':p2b(1px))
       ),
   'source-sans-pro': (
