--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -61,7 +61,7 @@ $base-base-fonts-16: (
     ),
   'open-sans': (
     12px:('d':p2b(4px)),
-    14px:('d':p2b(11px)),
+    14px:('d':p2b(11px), 1:p2b(2px)),
     16px:('d':p2b(10px)),
     18px:('d':p2b(9px)), 
     20px:('d':p2b(9px)),
