--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -116,6 +116,7 @@ $base-base-fonts-16: (
     38px:('d':p2b(12px)),
     40px:('d':p2b(11px)),
     42px:('d':p2b(11px)),
+    48px:('d':p2b(1px), 3:p2b(9px)),
     56px:('d':p2b(14px)),
     64px:('d':p2b(4px), 4: p2b(11px))
     ),
